# AoC2022

./: .gitignore  AoC2022.cabal  AoC2022.prof  CHANGELOG.md  README.md  aliases.sh  data.csv  data_.csv  day10.html  day11.html  day12.html  day13.html  day14.html  day15.html  day16.html  day4.html  day5.html  day6.html  day7.html  day8.html  day9.html
day1/code/: 1.cpp  1.hs  1.out  2.cpp  2.hs  2.out
day1/timing/: 1.txt  2.txt
day18/: enclosedinput.txt
day2/code/: 1.hs  2.hs  utils.hs
day3/code/: 1.hs  2.hs
day5/: input_with_msg.txt  input_with_msg_template.txt
day6/: long_input.txt
src/: Day10.hs  Day11.hs  Day11_part2.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day16_part2.hs  Day17.hs  Day17_part2.hs  Day17_part2_ copy.hs  Day17_part2_.hs  Day17_part2_actual.hs  Day18.hs  Day19.hs  Day19_part2.hs  Day4.hs  Day5.hs  Day5_gen.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Main.hs  day17_0to1000.csv
